<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/result_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@drawable/corner_radius_bg"
            android:gravity="center">

            <ImageView
                android:id="@+id/gic_logo"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:contentDescription="@string/todo"
                android:src="@drawable/gic_white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_90sdp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_150sdp"
                android:layout_gravity="center"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="@dimen/_55sdp"
                        android:layout_height="@dimen/_55sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/man" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/montserrat_alternates_regular"
                        android:gravity="center"
                        android:text="@string/john_doe"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_6sdp"
                        android:background="@drawable/corner_radius_bg"
                        android:fontFamily="@font/montserrat_alternates_regular"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/_8801830281708"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="center"

                android:orientation="horizontal">

                <androidx.cardview.widget.CardView

                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/whole_bg"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/montserrat_alternates_bold"
                            android:gravity="center"
                            android:text="@string/serial_no"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="#FFFFFF" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/corner_radius_bg"
                            android:fontFamily="@font/digital_mono"
                            android:text="@string/_09"
                            android:textSize="110sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView

                    android:layout_width="@dimen/_130sdp"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"

                    app:cardCornerRadius="16dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/whole_bg"
                        android:orientation="vertical">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:fontFamily="@font/montserrat_alternates_bold"
                            android:gravity="center"
                            android:text="@string/counter_no"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:background="#FFFFFF" />

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@drawable/corner_radius_bg"
                            android:fontFamily="@font/digital_mono"
                            android:text="@string/_03"
                            android:textSize="110sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_270sdp"
                android:layout_height="@dimen/_185sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                app:cardCornerRadius="16dp"
                app:cardElevation="6dp">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/girl" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/montserrat_alternates_regular"
                        android:gravity="center"
                        android:text="@string/rafia_farzana_borna"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="@dimen/_85sdp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/corner_radius_bg"
                        android:fontFamily="@font/montserrat_alternates_regular"
                        android:gravity="center"
                        android:padding="@dimen/_5sdp"
                        android:text="@string/councilor"
                        android:textSize="18sp" />


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </FrameLayout>

</LinearLayout>